--- a/数据科学.md
+++ b/数据科学.md
@@ -69,4 +69,48 @@ $$
 
 **特征交叉**：将两个和多个特征结合生成新的特征
 
-**离散和连续位置嵌入**：
+**离散和连续位置嵌入**：参考Transformer中的位置嵌入
+
+
+### 数据泄露
+
+数据泄露不仅指在训练时使用了测试集的数据，还有另一种更难发现的情况，如一个模型训练的数据来自一个更先进的机器的测量结果，而实际上模型面对的数据可能来自另一个普通机器的测量结果，而模型没有这个普通机器的信息，因此模型训练时，标签实际上泄露了数据的信息。
+
+数据泄露的一些原因：
+1. 随机分割时序数据（应该按照时间分割数据），如预测股票股价，将前6天的数据作为训练集，第7天的数据用来验证。
+2. 在分割之前进行scaling（应该在分割之后再进行scaling）
+3. 使用测试集中的信息填补空缺数据（同样在分割之后再进行填补）
+4. 在分割前没有处理好重复数据
+5. 组泄露：如果一组数据有着强相关的标签，但是被分到不同的数据集中。
+6. 数据收集时的泄露，如只收集一台机器产生的数据来训练和测试，解决这种泄露需要随机的收集数据。
+
+归一化数据可以使得不同数据源的数据有着相同的均值和方差，一定程度上避免了数据泄露。
+
+检查数据泄露：衡量每个特征与标签的相关程度，甚至是不同特征组合与标签的相关程度。做消融分析来衡量每个特征的重要程度
+
+### 好的特征工程
+
+特征泛化：如果一个特征只出现在很少的一部分数据中，那么这可能不是一个好的特征。此外如果一个特征值只出现在训练集而不出现在测试集，那么也不是一个好的特征（如训练集只收集周一到周六的数据，测试集是周日的数据，那么周几这个特征就不是一个好的特征，因为对于测试集，只有周日，而没有周一到周六）
+
+## 模型开发
+
+
+### 模型建模
+
+
+如果一个模型有两个目标函数（并且这两个目标函数均有实际的意义），如
+
+$$
+L = \alpha L_1+\beta L_2
+$$
+如果直接用这个目标函数训练网络，那么如果 $\alpha$ 和 $\beta$ 有变动，就需要重新训练模型。为了避免这一问题，可以分别用 $L_1$ 和 $L_2$ 训练模型，然后将两个模型的输出相结合得到最终结果。
+
+
+### 模型开发和训练
+
+**模型集成**：训练多个模型（一般这些模型的结构不同）集成得到结果。有三种方式来创建一个模型集成
+
+1. Bagging：对于一个数据集，有放回地采样来创建多个数据集，对于每个数据集都训练一个模型
+2. Boosting：Boosting是一类迭代集成算法，Boosting中的样本被分配不同的权重，下一个学习器更加关注上一个学习器错分的样本。首先在数据集训练一个弱分类器，根据分类准确率来为样本设置权重（错分的样本设置更高的权重），在加权的数据集上训练第二个分类器，此时集成有两个分类器，根据这两个分类器的分类结果来为数据集重新分配权重，再用重分配权重的数据集训练第三个分类器，重复下去，最后的分类器为这些分类器的结合。算法有：Gradient Boosting Machine，xgboost等
+3. 
+
