--- a/数据科学.md
+++ b/数据科学.md
@@ -112,5 +112,7 @@ $$
 
 1. Bagging：对于一个数据集，有放回地采样来创建多个数据集，对于每个数据集都训练一个模型
 2. Boosting：Boosting是一类迭代集成算法，Boosting中的样本被分配不同的权重，下一个学习器更加关注上一个学习器错分的样本。首先在数据集训练一个弱分类器，根据分类准确率来为样本设置权重（错分的样本设置更高的权重），在加权的数据集上训练第二个分类器，此时集成有两个分类器，根据这两个分类器的分类结果来为数据集重新分配权重，再用重分配权重的数据集训练第三个分类器，重复下去，最后的分类器为这些分类器的结合。算法有：Gradient Boosting Machine，xgboost等
-3. 
+3. Stacking：训练多个模型，将模型预测结果作为一个元学习器（可以是一个简单的逻辑回归模型）的输入，进行再一次学习。
+
+
 
