--- a/数据科学.md
+++ b/数据科学.md
@@ -5,6 +5,10 @@
 2. parquet 一种按列存储的二进制数据格式，可以使用 pandas 的 `to_parquet` 转换
 
 3. NoSQL（Not only SQL）是一种非关联型数据库，主要包括文档模型和图模型。文档模型的目标用例一般数据来自自包含的文档，并且文档之间的联系很少。图模型则相反，目标是数据项之间的关系常见且重要的用例。
+4. 32bit表示一个float数（单精度），16bit表示一个float（半精度），8bit表示一个int（定点）
+5. 在浏览器上运行模型可以选择 WASM，但是相比于原生代码还是比较慢
+
+
 
 
 ## 训练数据
@@ -113,6 +117,20 @@ $$
 1. Bagging：对于一个数据集，有放回地采样来创建多个数据集，对于每个数据集都训练一个模型
 2. Boosting：Boosting是一类迭代集成算法，Boosting中的样本被分配不同的权重，下一个学习器更加关注上一个学习器错分的样本。首先在数据集训练一个弱分类器，根据分类准确率来为样本设置权重（错分的样本设置更高的权重），在加权的数据集上训练第二个分类器，此时集成有两个分类器，根据这两个分类器的分类结果来为数据集重新分配权重，再用重分配权重的数据集训练第三个分类器，重复下去，最后的分类器为这些分类器的结合。算法有：Gradient Boosting Machine，xgboost等
 3. Stacking：训练多个模型，将模型预测结果作为一个元学习器（可以是一个简单的逻辑回归模型）的输入，进行再一次学习。
+
+
+
+### 模型评估
+
+**模型校准（calibration）**：模型校准是为了将模型预测概率（模型预测的概率往往只表示大小，如分类模型中的概率）转为真实概率。
+
+如何评价一个模型是否校准：先在训练集上训练好一个模型，在验证集上进行预测得到预测标签 $\hat y_i$，预测标签 $\hat y_i$ 和真实标签 $y_i$ 相互拼接成 $(\hat y_i, y_i)$，按照 $\hat y_i$ 升序排列，将这些数据等间距分组（如每10个分成一组），分别计算每组 $\hat y_i$ 和 $y_i$ 的均值，对均值画图，看是不是近似一条45度的折线。
+
+实现模型校准的一种方法为 Platt scaling。
+
+
+**切片评估**：将数据切成多组数据，并且使用模型对每组数据进行评估，使用模型对于测试集中的所有数据进行评估，有时会出现一些问题。分组的方法有按照经验分的，还有专门的算法：[Slice Finder: Automated Data Slicing for Model Validation | IEEE Conference Publication | IEEE Xplore](https://ieeexplore.ieee.org/abstract/document/8731353)。
+
 
 
 
