--- a/数据科学.md
+++ b/数据科学.md
@@ -1,4 +1,8 @@
 
+
+# 理论学习
+
+
 ## 小知识
 
 1. numpy 的数据按行存储，pandas 的数据按列存储，pandas的按行读取 iloc 比按列读取慢很多，而numpy按列和按行读取都很快
@@ -7,7 +11,6 @@
 3. NoSQL（Not only SQL）是一种非关联型数据库，主要包括文档模型和图模型。文档模型的目标用例一般数据来自自包含的文档，并且文档之间的联系很少。图模型则相反，目标是数据项之间的关系常见且重要的用例。
 4. 32bit表示一个float数（单精度），16bit表示一个float（半精度），8bit表示一个int（定点）
 5. 在浏览器上运行模型可以选择 WASM，但是相比于原生代码还是比较慢
-
 
 
 
@@ -130,6 +133,100 @@ $$
 
 
 **切片评估**：将数据切成多组数据，并且使用模型对每组数据进行评估，使用模型对于测试集中的所有数据进行评估，有时会出现一些问题。分组的方法有按照经验分的，还有专门的算法：[Slice Finder: Automated Data Slicing for Model Validation | IEEE Conference Publication | IEEE Xplore](https://ieeexplore.ieee.org/abstract/document/8731353)。
+
+
+
+
+# 机器学习算法
+
+
+## GBDT（梯度提升树）
+
+[GBDT算法原理以及实例理解_gbdt算法实例 csdn-CSDN博客](https://blog.csdn.net/zpalyq110/article/details/79527653)
+
+### CART回归树
+
+GBDT 中使用了许多的决策树，这些决策树基本上都是CART回归树。由于GBDT每次迭代需要拟合梯度（连续值），所以不使用分类树。对于回归树算法来说最重要的是寻找最佳的划分点，回归树中的可划分点包含了所有特征的所有可取的值。在分类树中最佳划分点的判别标准是熵或者基尼系数，都是用纯度来衡量的，但是在回归树中的样本标签是连续数值，所以使用熵之类的指标不合适，取而代之的是平方误差。
+
+**生成算法**
+
+输入：训练数据集 D
+输出：回归树 T
+
+1. 计算各个特征各个值划分的两部分区域 $R_1$ 和 $R_2$ 的误差平方和，选择误差平方和最小的作为最优特征 j 和最优切分点 s
+
+$$
+\mathop {\min }\limits_{j,s} \left[ {\mathop {\min }\limits_{{c_1}} \sum\limits_{{x_i} \in {R_1}(j,s)} {{{\left( {{y_i} - {c_1}} \right)}^2}}  + \mathop {\min }\limits_{{c_2}} \sum\limits_{{x_i} \in {R_2}(j,s)} {{{\left( {{y_i} - {c_2}} \right)}^2}} } \right]
+$$
+其中，$c_1$ 是 $R_1$ 的样本输出均值，$c_2$ 是 $R_2$ 的样本输出均值
+
+2. 根据最优特征 j 和最优切分点 s，将数据集划分为两个子集合 $R_1$ 和 $R_2$
+
+$$
+\eqalign{
+  & {R_1}(j,s) = D(x|{x^{(j)}} \le s),\quad {R_2}(j,s) = D(x|{x^{(j)}} > s)  \cr 
+  & {c_m} = {1 \over {\left| {{R_m}(j,s)} \right|}}\sum\limits_{{x_i} \in {R_m}(j,s)} {{y_i}}  \cr} 
+$$
+3. 对于两个子集合分别执行步骤 1 和 2，直至满足条件。
+
+对生成的CART回归树做预测时，用叶子节点的均值来作为预测的输出结果。
+
+### Gradient Boosting
+
+假设对 x = 30 拟合，如果 $\hat x_1 = 20$，那么误差就是 10，再对误差进行拟合假设损失变为 5，继续对损失拟合，这样迭代下去，拟合的误差就会逐步减小，所有的拟合结果加起来就是最终结果。
+
+**梯度提升算法**
+
+1. 初始化 $f_0(x) = 0$
+2. 迭代 M 次，对于 m = 1，2，...，M
+	a. 对N个样本分别计算残差：${r_{mi}} = {y_i} - {f_{m - 1}}(x),\;i = 1,2,...,N$
+	b. 拟合残差 $r_{mi}$ 学习一个回归树 $h_m(x)$
+	c. 更新 $f_m(x) = f_{m-1}(x)+h_m(x)$
+3. 回归问题提升树
+$$
+{f_M}(x) = {f_0}(x) + \sum\limits_{m = 1}^M {{h_m}(x)}  = \sum\limits_{m = 1}^M {{h_m}(x)} 
+$$
+这里拟合的残差就是负梯度，假设前一轮迭代得到的学习器为 $f_{t-1}(x)$，那么本轮目标是找到一个回归树 $h_t(x)$ 让本轮的损失最小，如果使用平方损失函数
+
+$$
+\eqalign{
+  & L(y,{f_t}(x)) = L(y,{f_{t - 1}}(x) + {h_t}(x))  \cr 
+  &  = {\left( {y - {f_{t - 1}}(x) - {h_t}(x)} \right)^2} = {\left( {r - {h_t}(x)} \right)^2} \cr} 
+$$
+为了最小化损失，计算梯度，可以得到负梯度就是残差（忽略乘数）
+
+$$
+- {{\partial L} \over {\partial f}} =  - {{\partial {{\left( {y - f} \right)}^2}} \over {\partial f}} = y - f(x)
+$$
+
+### GBDT算法
+
+1. 初始化回归树
+
+$$
+{f_0}(x) = \arg \mathop {\min }\limits_c \sum\limits_{i = 1}^N {L\left( {{y_i},c} \right)} 
+$$
+一般来说，由于 $L$ 是平方损失，因此通过对 $f_0(x)$ 求导，令导数为0，求解出来的 $c = {1 \over N}\sum\limits_{i = 1}^N {{y_i}}$，即 $f_0(x)$ 为所有 $y$ 的均值。
+
+2. 迭代 M 次，对于 m = 1, 2, ..., M
+	a. 对于 N 个样本计算负梯度（残差）$r_{mi}$
+	b. 将上步得到的残差作为样本新的标签值，即将训练对 $(x_i,y_i)$ 换成 $(x_i, r_i)$，再使用一个新回归树训练，得到回归树 $h_m(x)$ 及其对应的叶子节点区域 $R_{jm}, j=1,2,\cdots, J$，$J$ 是叶子节点的个数
+	c. 对叶子区域 $j=1,2,\cdots, J$ 计算最佳拟合值（对损失求导，令导数为0，求解 $\Upsilon_{jm}$）
+$$
+{\Upsilon _{jm}} = \arg \mathop {\min }\limits_\Upsilon  \sum\limits_{{x_i} \in {R_{jm}}} {L({y_i},{f_{m - 1}}({x_i}) + \Upsilon )} 
+$$
+	d. 更新强学习器（$l_r$ 为学习率）
+$$
+{f_m}(x) = {f_{m - 1}}(x) + l_r \sum\limits_{j = 1}^J {{\Upsilon _{jm}}I\left( {x \in {R_{jm}}} \right)} 
+$$
+3. 最终的学习器
+
+$$
+f(x) = {f_0}(x) + \sum\limits_{m = 1}^M {\sum\limits_{j = 1}^J {{\Upsilon _{jm}}I\left( {x \in {R_{jm}}} \right)} } 
+$$
+
+
+
 
 
 
