--- a/数据科学.md
+++ b/数据科学.md
@@ -215,7 +215,9 @@ $$
 $$
 {\Upsilon _{jm}} = \arg \mathop {\min }\limits_\Upsilon  \sum\limits_{{x_i} \in {R_{jm}}} {L({y_i},{f_{m - 1}}({x_i}) + \Upsilon )} 
 $$
-	d. 更新强学习器（$l_r$ 为学习率）
+
+​	d. 更新强学习器（$l_r$ 为学习率）
+
 $$
 {f_m}(x) = {f_{m - 1}}(x) + l_r \sum\limits_{j = 1}^J {{\Upsilon _{jm}}I\left( {x \in {R_{jm}}} \right)} 
 $$
