--- a/深度学习库.md
+++ b/深度学习库.md
@@ -107,6 +107,13 @@ quantized_model = quantize_dynamic(model_fp32, model_quant,
 有时候使用 quantize_dynamic 量化后得到的模型无法正常使用，可能是因为没有设置 op_types_to_quantize.
 
 
+# OpenVINO
+
+[openvinotoolkit/openvino: OpenVINO™ is an open-source toolkit for optimizing and deploying AI inference](https://github.com/openvinotoolkit/openvino)
+
+可以将常见的深度学习框架模型（包括 Tensorflow，Pytorch 和 ONNX）转为专门在 Intel 设备上运行的模型，包含模型量化，剪枝等技术。
+
+
 # tensorflow
 
 ## 安装
