--- a/信号处理.md
+++ b/信号处理.md
@@ -126,11 +126,62 @@ while (n > mmax)
 
 
 
+### 实数FFT
+
+实数信号的 FFT 结果是对称的，对于长度为 $N$ 的实数信号，只有前 $N/2+1$ 个值是独立的
+
+$$
+X[k] = {\mathop{\rm conj}\nolimits} \left( {X[N - k]} \right),\quad k = 1,2, \cdots ,N/2
+$$
+在计算时，可以将实数信号 $x[n]$ 分解为偶数部分和奇数部分
+
+$$
+{x_e}[m] = x[2m]\quad {x_o}[m] = x[2m + 1]
+$$
+然后创建新的序列 $z(n)=x_e(n)+jx_o(n)$，对 $z(n)$ 进行 N/2 点 FFT得到 $Z(k)$。
+
+$$
+{X_e}[k] = {{Z[k] + {Z^*}[N/2 - k]} \over 2}\quad {X_o}[k] =  - j{{Z[k] - {Z^*}[N/2 - k]} \over 2}
+$$
+因此 
+$$
+X[k] = {X_e}[k\bmod N/2] + {X_o}[k\bmod N/2]{e^{ - j{{2\pi k} \over N}}}
+$$
+
+简化之后为
+
+$$
+\eqalign{
+  & X[k] = {X_e}[k] + {X_o}[k]{e^{ - j{{2\pi k} \over N}}}\quad k = 0,...,N/2 - 1  \cr 
+  & X[k] = {X_e}[k] - {X_o}[k]\quad k = N/2  \cr 
+  & X[k] = {X^*}[N - k]\quad k = N/2 + 1,...,N - 1 \cr} 
+$$
+
+IFFT 的过程如下：
 
 
+奇数位的FFT结果为
+$$
+\eqalign{
+  & X[k] + {X^*}[N/2 - k] = {X_e}[k] + {X_o}[k]{e^{ - j{{2\pi k} \over N}}} + {X_e}[N/2 - k] + {X_o}[N/2 - k]{e^{ - j{{2\pi k} \over N}}}  \cr 
+  &  = 2{X_e}[k] \Rightarrow {X_e}[k] = {1 \over 2}\left( {X[k] + {X^*}[N/2 - k]} \right) \cr} 
+$$
+偶数位的FFT结果为
+$$
+X[k] - {X^*}[N/2 - k] = 2{X_o}[k]{e^{ - j{{2\pi k} \over N}}} \Rightarrow {X_o}[k] = {1 \over 2}\left( {X[k] - {X^*}[N/2 - k]} \right){e^{j{{2\pi k} \over N}}}
+$$
+则 $Z[k]=X_e[k]+jX_o[k]$，对 $Z[k]$ 进行 IFFT，得到 $z[n]$，则 $z[n]=x_e[n]+jx_o[n]$
 
 
+如果有两个实数序列 $x(n)$ 和 $y(n)$ 需要做 FFT，可以将其组成一个复数序列 $z(n)=x(n)+jy(n)$，得到 $Z(k)$，那么两个实数的 FFT 结果为
 
+$$
+X[k] = {{Z[k] + {Z^*}[N - k]} \over 2}\quad Y[k] =  - j{{Z[k] - {Z^*}[N - k]} \over 2}
+$$
+IFFT 的过程如下：
+
+（1）$Z(k)=X(k)+Y(k)$，对 $Z(k)$ 做 IFFT 得到 $z(n)$
+（2）$x(n) = {\mathop{\rm Re}\nolimits} \{ z(n)\} \quad y(n) = {\mathop{\rm Im}\nolimits} \{ z(n)\}$
 
 ## 滤波器
 
@@ -186,5 +237,40 @@ graph LR
 
 
 
+## 声源定位
 
+
+### GCC-PHAT
+
+时延估计的一种基本算法是基于广义互相关函数（Generalized Cross Correlation PHAse Transformation，GCC-PHAT），引入了一个加权函数，对互功率谱密度进行调整，从而优化时延估计的性能。
+
+广义互相关函数时延估计算法根据两个麦克风信号的互相关函数峰值来估计时延值。在声源定位系统中，麦克风阵列的每个阵元接收到的目标信号都来自于同一个声源。因此，各通道信号之间具有较强的相关性。理想情况下，通过计算每两路信号之间的相关函数，就可以确定两个麦克风观测信号之间的时延。
+
+阵列中两个麦克风的接收信号为
+
+$$
+\eqalign{
+  & {x_1}(t) = {\alpha _1}s(t - {\tau _1}) + {n_1}(t)  \cr 
+  & {x_2}(t) = {\alpha _2}s(t - {\tau _2}) + {n_2}(t) \cr} 
+$$
+$\tau_1$ 和 $\tau_2$ 是信号从声源处传播到两个麦克风阵元的传播时间。
+
+对 $x_1(t)$ 和 $x_2(t)$ 做互相关
+
+$$
+{R_{{x_1}{x_2}}}(\tau ) = {\alpha _1}{\alpha _2}E\left( {s(t - {\tau _1})s(t - {\tau _2} - \tau )} \right) = {\alpha _1}{\alpha _2}{R_{ss}}\left( {\tau  - \left( {{\tau _1} - {\tau _2}} \right)} \right)
+$$
+其中互相关函数的最大值对应时延 $\tau_1-\tau_2$。
+
+由于存在混响和噪声影响，导致 ${R_{{x_1}{x_2}}}(\tau )$ 的峰值不明显，降低了时延估计的精度。为了锐化 ${R_{{x_1}{x_2}}}(\tau )$ 的峰值，可以根据信号和噪声的先验知识，在频域内对互功率谱进行加权，从而能抑制噪声和混响干扰。最后进行傅里叶逆变换，得到广义互相关函数 ${R_{{x_1}{x_2}}}(\tau )$：
+
+$$
+{R_{{x_1}{x_2}}}(\tau ) = \int_0^\pi  {{\varphi _{12}}(w){X_1}(w)X_2^*(w){e^{ - jw\tau }}} dw
+$$
+
+一种加权函数为
+
+$$
+{\varphi _{PHAT}}(w) = {1 \over {\left| {{G_{{x_1}{x_2}}}(w)} \right|}} = {1 \over {\left| {{X_1}(w)X_2^*(w)} \right|}}
+$$
 
