--- a/多媒体.md
+++ b/多媒体.md
@@ -731,6 +731,8 @@ add_executable(${PROJECT_NAME} *.cpp)	# *.cpp指要编译的那些源文件
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 ```
 
+>注意需要手动复制依赖的链接库。
+
 # WebRTC
 
 一个实时通信（音视频、文件传输、屏幕共享等）的基于浏览器的 API，WebRTC 可以直接使用 js 编写，通过 html 可视化效果。
