--- a/工具使用.md
+++ b/工具使用.md
@@ -1,4 +1,50 @@
 
+# Gradle
+
+Gradle 是一套编译工具，可用于 java、kotlin、scala、C++ 等语言的编译构建。
+
+在 [Gradle | Releases](https://gradle.org/releases/) 上下载 binary-only 文件，或者在腾讯 gradle 镜像[Index of /gradle/](https://mirrors.cloud.tencent.com/gradle/) 上下载。解压后在环境变量中添加 `GRADLE_HOME=D:\gradle-7.6.1`，然后在PATH中添加 `%GRADLE_HOME%\bin`
+
+## 基本使用
+
+### 初始化项目
+
+**首先先创建一个文件夹，切换到该文件夹后**，执行
+
+```sh
+gradle init
+```
+
+创建的项目文件夹中会包括 `gradlew.bat` 脚本，后续的gradle操作主要依赖这个脚本来实现。
+
+
+> [!NOTE] gradle 和 gradlew
+> gradle 一般用于创建项目，在项目创建完成后，推荐使用 gradlew （gradle warpper） 来进行后面的操作。gradlew 不依赖本地的 gradle 安装，只和指定的 Gradle 版本绑定，方便项目移植。
+
+项目的 gradle版本指定位于 gradle/wrapper/gradle-wrapper.properties，默认从官方下载
+
+```
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.6.1-bin.zip
+```
+
+可以替换为本地位置或者镜像位置
+
+```
+distributionUrl=file:///D://work//app//gradle-7.6.1-bin.zip
+distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-7.6.1-bin.zip   
+```
+
+在 Android studio 中可以在 `Build, Execution, Deployment -> Build Tools -> Gradle` 中指定 Gradle 位置。对于在 Android studio 中 sync 项目慢的问题，可以设置 `Settings->System Setting->HTTP Proxy` 中的 Automatic proxy configuration URL 为 `mirrors.neusoft.edu.cn:80`。
+
+
+### 构建项目
+
+```sh
+gradle build
+```
+
+
+
 
 # MSYS2
 
@@ -3150,7 +3196,7 @@ int main(){
 
 Live Server与nginx的功能类似，都是通过代理实现本地服务器。
 
-Live Server的默认端口为5500，默认根文件夹为vscode当前打开的目录，默认主机名为`127.0.0.1`，如果需要修改配置，可以参考[vscode-live-server/docs/settings.md](https://github.com/ritwickdey/vscode-live-server/blob/HEAD/docs/settings.md)
+Live Server的默认端口为5500，默认根文件夹为vscode当前打开的目录，默认主机名为`127.0.0.1`，如果需要修改配置，可以参考 [vscode-live-server/docs/settings.md](https://github.com/ritwickdey/vscode-live-server/blob/HEAD/docs/settings.md)
 
 如果当前目录中有`index.html`或`index.htm`显示`index.html`，否则只会是一个文件浏览器
 
