--- a/信号处理.md
+++ b/信号处理.md
@@ -55,7 +55,7 @@ $$
 
 假设 N = 8，那么 $u(0) = x(0)$, $u(1) = x(2)$, $u(2) = x(4)$, $u(3) = x(6)$；$v(0) = x(1)$, $v(1) = x(3)$, $v(2) = x(5)$, $v(3) = x(7)$。继续分解，可得 $u_1(0) = u(0)$, $u_1(1) = u(2)$ 等，则计算时将 $x(0)$ 和 $x(4)$ 放在一起。 
 
-输入时需要倒序存储，如第 1 位对应的序号为 001，倒序为 100，即对应 $x(4)$
+输入时需要倒序存储，如第 1 位对应的序号为 001，倒序为 100，即对应 $x(4)$。
 
 在程序实现时，对于输入的 N 点数据，需要先补 N 个零，代表虚数
 
@@ -126,6 +126,7 @@ while (n > mmax)
 
 
 
+
 ### 实数FFT
 
 实数信号的 FFT 结果是对称的，对于长度为 $N$ 的实数信号，只有前 $N/2+1$ 个值是独立的
@@ -182,6 +183,52 @@ IFFT 的过程如下：
 
 （1）$Z(k)=X(k)+Y(k)$，对 $Z(k)$ 做 IFFT 得到 $z(n)$
 （2）$x(n) = {\mathop{\rm Re}\nolimits} \{ z(n)\} \quad y(n) = {\mathop{\rm Im}\nolimits} \{ z(n)\}$
+
+
+### STFT
+
+代码：[stft c 实现](https://gist.github.com/Xiang-M-J/170fe0fdb38661886a80aaf83b78e619)
+
+
+STFT 实际上是对于数据加窗后进行 FFT，
+
+```c
+void stft(float* input, float* output, float* win, int frameSize)
+{
+	
+	float* frame = (float*)malloc(sizeof(float) * frameSize);
+	for (size_t i = 0; i < frameSize; i+=1)
+	{
+		frame[i] = win[i] * input[i];
+	}
+    fft(frame, frameSize, output);
+}
+```
+
+
+由于 STFT 的窗需要满足重叠加和的完备性，即
+
+$$
+\sum\limits_t {w\left[ {n - tH} \right] = } C
+$$
+其中 H 是帧移。
+
+所以对输出加窗后和前一次的计算结果求和便可得到结果
+
+```c
+void istft(float* input, float* output, float* win, int frameSize) {
+    ifft(input, frameSize, output);
+    for (size_t i = 0; i < frameSize; i += 1)
+    {
+        output[i] = output[i] * win[i];
+    }
+	// 下面用python简写
+	output[:FFT_Len - Hop_Len] = output[:FFT_Len - Hop_Len] + frame
+	frame = output[FFT_Len - Hop_Len:]
+}
+```
+
+
 
 ## 滤波器
 
