--- a/数据科学.md
+++ b/数据科学.md
@@ -14,6 +14,7 @@
 
 
 
+
 ## 训练数据
 
 
@@ -392,6 +393,139 @@ $$
 **切片评估**：将数据切成多组数据，并且使用模型对每组数据进行评估，使用模型对于测试集中的所有数据进行评估，有时会出现一些问题。分组的方法有按照经验分的，还有专门的算法：[Slice Finder: Automated Data Slicing for Model Validation | IEEE Conference Publication | IEEE Xplore](https://ieeexplore.ieee.org/abstract/document/8731353)。
 
 
+
+## 机器学习的可解释性
+
+
+### 特征排列重要性
+
+通过分析各行特征的排列对于模型性能的影响可以很快找到重要的特征。
+
+先训练好模型，在验证时，故意打乱某一列特征的顺序，其它列和标签的顺序不变，观察指标的变化程度，指标降低越多，证明该特征越重要。
+
+可以使用 eli5 包来可视化特征排列的重要性，重要性从上之下排列，越在上面越重要
+
+```python
+import eli5
+from eli5.sklearn import PermutationImportance
+
+# 先训练好模型
+perm = PermutationImportance(my_model, random_state=1).fit(val_X, val_y)
+eli5.show_weights(perm, feature_names = val_X.columns.tolist())
+```
+
+### 部分依赖图（Partial Dependence Plots）
+
+用来展现一个特征对模型预测的影响，部分依赖图在模型训练好之后计算，适用于真实场景下的数据。具体做法是重复修改一个变量的值（如从小到大递增）并进行预测，得到一个预测值序列，将预测值作为 y 轴，将变量作为 x 轴绘制部分依赖图。
+
+一个示例
+
+```python
+from matplotlib import pyplot as plt
+from sklearn.inspection import PartialDependenceDisplay
+
+# Create and plot the data
+disp1 = PartialDependenceDisplay.from_estimator(tree_model, val_X, ['Goal Scored'])
+plt.show()
+```
+
+![](https://www.kaggleusercontent.com/kf/126573587/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..YViumjnbHHD5gY63CRgVtw.E-8Nxt_RNRtccCTtpIxoPz2YpONGhW1zGO4-TqTLZY_sUjjQ6D7as72kIK9Yfrg4Jq9dly7UvTehSt2lq5S36n1CwmnndgaVEZuebYSWQOcuhORNRuXsvOuRwbqPo-Lm3M7SJmBaB_SUULi7NLDE5HcoSKTcIGX5vQkqgv63gMNq_8GS3p0ylr-oqSFZKdvCh20Xm3HmDVK5zvBSm-jpJGxe0vKrCyNDAHUShSv3ptlkuGSm1dWyvbReBbTXpQgmOQiNEV_xEIi-0CzB-zrxLKztXlFG7Zux01yTTrJNG58NVhoeoQOPAT3a9LaBmWNHqdwYa90nFS0qn_XCyth02Kf46a0E64twSuDOz_hzyPmguPWFXiQoEra5uDS3p5bwdikP6FuPwBeper4QrJ-RbK0hKZzaD_rZVuV4Q9Rjy_svgilCrVQaT4w2utMf17ypr-85IwWU3arVoYypXlbKs5D62WrrjcE6U0gdrTWGaWs67UlkS7Zw-iwm7bubzzcofnUDeaFMbTjQ3vZ3hL749iWKVkKovsvZ22jVG63dc6gZqqutNvChyLAU4w_gr7auL2Wbk66-Pw4pHpM94j3_HDU1UK2KP79ddbAdi7lUyUcyXgHGmqYfHlhh_spZc6m_.LUSSNMTwTb5wI8DS_wBmRQ/__results___files/__results___6_0.png)
+
+
+二维部分依赖图
+
+```python
+fig, ax = plt.subplots(figsize=(8, 6))
+f_names = [('Goal Scored', 'Distance Covered (Kms)')]
+# Similar to previous PDP plot except we use tuple of features instead of single feature
+disp4 = PartialDependenceDisplay.from_estimator(tree_model, val_X, f_names, ax=ax)
+plt.show()
+```
+
+![](https://www.kaggleusercontent.com/kf/126573587/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..YViumjnbHHD5gY63CRgVtw.E-8Nxt_RNRtccCTtpIxoPz2YpONGhW1zGO4-TqTLZY_sUjjQ6D7as72kIK9Yfrg4Jq9dly7UvTehSt2lq5S36n1CwmnndgaVEZuebYSWQOcuhORNRuXsvOuRwbqPo-Lm3M7SJmBaB_SUULi7NLDE5HcoSKTcIGX5vQkqgv63gMNq_8GS3p0ylr-oqSFZKdvCh20Xm3HmDVK5zvBSm-jpJGxe0vKrCyNDAHUShSv3ptlkuGSm1dWyvbReBbTXpQgmOQiNEV_xEIi-0CzB-zrxLKztXlFG7Zux01yTTrJNG58NVhoeoQOPAT3a9LaBmWNHqdwYa90nFS0qn_XCyth02Kf46a0E64twSuDOz_hzyPmguPWFXiQoEra5uDS3p5bwdikP6FuPwBeper4QrJ-RbK0hKZzaD_rZVuV4Q9Rjy_svgilCrVQaT4w2utMf17ypr-85IwWU3arVoYypXlbKs5D62WrrjcE6U0gdrTWGaWs67UlkS7Zw-iwm7bubzzcofnUDeaFMbTjQ3vZ3hL749iWKVkKovsvZ22jVG63dc6gZqqutNvChyLAU4w_gr7auL2Wbk66-Pw4pHpM94j3_HDU1UK2KP79ddbAdi7lUyUcyXgHGmqYfHlhh_spZc6m_.LUSSNMTwTb5wI8DS_wBmRQ/__results___files/__results___12_0.png)
+
+
+### 夏普利加法解释（SHAP）
+
+SHAP 值解释了为给定特征赋予某个特定值的影响，与我们在该特征带有某个基准值时所做的预测相比较。
+
+一个示例，shap 除了 `TreeExplainer`，还有 `DeepExplainer`（用于深度学习模型）和 `KernelExplainer`（可用于所有模型，但是比较慢，仅提供一个近似值）
+
+```python
+row_to_show = 5
+data_for_prediction = val_X.iloc[row_to_show]  # use 1 row of data here. Could use multiple rows if desired
+data_for_prediction_array = data_for_prediction.values.reshape(1, -1)
+
+my_model.predict_proba(data_for_prediction_array)
+
+import shap  # package used to calculate Shap values
+
+# Create object that can calculate shap values
+explainer = shap.TreeExplainer(my_model)
+
+# Calculate Shap values
+shap_values = explainer.shap_values(data_for_prediction)
+
+shap.initjs()
+shap.force_plot(explainer.expected_value[1], shap_values[1], data_for_prediction)
+```
+
+![](https://storage.googleapis.com/kaggle-media/learn/images/JVD2U7k.png)
+
+`shap_values` 中有两个数组，第一个数组为负结果的SHAP值，第二个数组为正结果的SHAP值。图中的粉色特征提高预测值，而蓝色的降低预测值。
+
+一次计算多个样本
+
+```python
+small_val_X = val_X.iloc[:150]
+explainer = shap.TreeExplainer(my_model)
+shap_values = explainer.shap_values(small_val_X)
+
+shap.summary_plot(shap_values[1], small_val_X)
+```
+
+### 局部可解释模型（LIME）
+
+对于一个需要解释的黑盒模型（一般为svm，决策树等模型），选取关注的样本 $x$，在其附近进行扰动生成新的样本点（需要对哪些特征进行解释，就在哪些特征上扰动），使用黑盒模型预测这些新的样本点，形成一个关于 $x$ 的小数据集。用这个数据集训练一个可解释性比较强的线性模型（或者其它解释性较强的模型），虽然整个模型可能是复杂的非线性模型，但是局部点可以拟合一个线性模型。
+
+```python
+import sklearn
+import sklearn.datasets
+import sklearn.ensemble
+import numpy as np
+import lime
+import lime.lime_tabular
+
+x = np.array(data[feats].fillna(-99999))
+y = np.array(data['target'])
+# 数据集划分
+X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state = 400)
+# 训练XGBoost模型
+model_xgb = xgb.XGBClassifier(
+                        learning_rate =0.05,
+                         n_estimators=50,
+                         max_depth=3,
+                         min_child_weight=1,
+                         gamma=0.3,
+                         subsample=0.8,
+                         colsample_bytree=0.8,
+                         objective= 'multi:softprob',
+                         nthread=4,
+                         scale_pos_weight=1,
+                         num_class=2,
+                         seed=27
+                    ).fit(X_train, y_train)
+# 生成解释器
+explainer = lime.lime_tabular.LimeTabularExplainer(X_train, feature_names=feats,
+                                                   class_names=[0,1], discretize_continuous=True)
+# 对局部点的解释
+i = np.random.randint(0, X_test.shape[0])
+exp = explainer.explain_instance(X_test[i], model_xgb.predict_proba, num_features=6)
+# 显示详细信息图
+exp.show_in_notebook(show_table=True, show_all=True)
+# 显示权重图
+exp.as_pyplot_figure()
+```
 
 
 # 机器学习算法
