--- a/工具使用.md
+++ b/工具使用.md
@@ -45,6 +45,39 @@ gradle build
 
 
 
+### 兼容性
+
+Android studio 和 Andorid Gradle 插件之间存在兼容需要，详见：[Android Gradle 插件 8.7 版本说明  |  Android Studio  |  Android Developers](https://developer.android.google.cn/build/releases/gradle-plugin?hl=zh-cn#android_gradle_plugin_and_android_studio_compatibility)。如 Android Studio Koala | 2024.1.1 适用于 3.2-8.5 版本的 Android Gradle 插件
+
+这里的 Android Gradle 插件指的是 build.gradle 中的
+
+```json
+dependencies{
+	classpath 'com.android.tools.build:gradle:8.1.0'
+}
+```
+
+
+Android Gradle 插件和 Gradle 版本之间也存在兼容性，详见：[Android Gradle 插件 8.7 版本说明  |  Android Studio  |  Android Developers](https://developer.android.google.cn/build/releases/gradle-plugin?hl=zh-cn#updating-gradle)
+
+一般来说，插件版本越高，需要的Gradle版本就越高。
+
+
+
+## 常见错误
+
+The project is using an incompatible version (AGP 8.6.0) of the Android Gradle plugin. Latest supported version is AGP 8.5.0
+
+在 build.gradle 中的
+
+```json
+dependencies {  
+     classpath 'com.android.tools.build:gradle:8.6.0'  
+     classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.0"  
+}
+```
+
+中的 `com.android.tools.build:gradle` 改为其它版本，如 8.1.0，多试几次。
 
 # MSYS2
 
