--- a/工具使用.md
+++ b/工具使用.md
@@ -79,6 +79,35 @@ dependencies {
 
 中的 `com.android.tools.build:gradle` 改为其它版本，如 8.1.0，多试几次。
 
+
+
+# Filezilla
+
+## 使用Filezilla与ubuntu虚拟机互相连接
+
+### Ubuntu端
+
+1. 设置超级用户
+2. 关掉防火墙
+3. 安装openssh-server
+
+```
+sudo apt-get install openssh-server
+```
+
+4. 使用`ifconfig`查看网址
+
+```
+ens33 .....
+inet 192.168.40.128
+```
+
+### Windows端
+
+主机输入网址，用户名输入xmj 密码输入 端口输入22。
+
+
+
 # MSYS2
 
 提供了一套较为完整的 linux 环境，可以在 Windows 系统下编译 linux 下的许多软件。
@@ -136,7 +165,7 @@ dependencies {
 打开文件后，在普通模式下输入 `:set ff=unix`。
 
 
-# git
+# Git
 
 ## 一些指令
 
@@ -286,30 +315,39 @@ git merge origin/master
 
 
 
-# Fillzilla
+## 下载 Github 中的文件夹
 
-## 使用Fillzilla与ubuntu虚拟机互相连接
 
-### Ubuntu端
 
-1. 设置超级用户
-2. 关掉防火墙    
-3. 安装openssh-server
+1. ~~右键打开`svn checkout`~~
+2. ~~复制希望下载的网址比如 https://github.com/facebookresearch/fairseq/tree/main/examples/hubert 粘贴进`SVN Checkout`的窗口的`URL of repository`中~~
+3. ~~将`/tree/main/`或者是`/tree/master/`换成`/trunk/`，再下载即可~~
+4. ~~如果不是master分支 ， 比如是develop分支，只需要将`/trunk/`换成`/branches/branchname/`就行了，对于develop分支即为`/branches/develop/`.~~
+
+[GitZip (kinolien.github.io)](https://kinolien.github.io/gitzip/)（好像可以直接下载，无需粘贴token）
+
+使用脚本下载，将下列代码保存为 `pull.sh`
+
 ```sh
-sudo apt-get install openssh-server
+url=$1
+current=`date "+%Y-%m-%d %H:%M:%S"`  
+timeStamp=`date -d "$current" +%s`
+floder=$2$timeStamp
+git init $floder
+cd $floder
+git remote add origin $url
+git config core.sparsecheckout true
+echo $2>.git/info/sparse-checkout 
+git pull origin main --depth 1
+exit 0
 ```
 
-4. 使用 ifconfig 查看网址
+用法：`pull.sh <git网址> <文件夹>`，在命令行执行命令
 
+```sh
+pull.sh https://github.com/microsoft/vscode.git src
 ```
-ens33 .....  
-inet 192.168.40.128
-```
 
-
-### Windows端
-
-需要安装 Fillzilla，主机输入网址，用户名输入xmj 密码输入 端口输入22
 
 
 # WebAssembly
@@ -1319,7 +1357,7 @@ AuraDB是一款在线的图数据库，网址为 [neo4j](https://console.neo4j.i
 进入实例后，首先需要导入数据，进入 Import 界面，首先先创建节点，点击这个按钮来创建节点
 
 ![image-20231228194632204](D:\TyporaImages\image-20231228194632204.png)
- 
+
 选择该节点，创建节点的属性，可以直接从 csv 文件中导入。
 
 两个节点之间可以创建关系，直接从一个节点的边缘拖到另一个节点的边缘即可自动创建关系。
@@ -2393,7 +2431,7 @@ chmod +x run.sh
 
 ```sh
 which ls   # 查看 ls 命令的路径
-``` 
+```
 
 #### du/df 查看路径大小
 
@@ -2605,7 +2643,7 @@ ssh [-p port] user@remote
 
 
 #### scp 复制文件
-    
+
 - 地址格式与ssh基本相同，但在指定端口时用的是大写的 -P
 
 ```sh
