--- a/工具使用.md
+++ b/工具使用.md
@@ -81,6 +81,70 @@ dependencies {
 
 
 
+# Autohotkey
+
+一款在windows实现自动化的工具，可以编写脚本执行打开软件、发送快捷键完成一些任务等。
+
+>推荐安装1.1版本，虽然有更新的，但是网络上找到的资料大多根据1.1
+
+## 实际示例
+
+### 自动在 Typora 中导出 html 文件
+
+首先在 Typora 中设置导出 html 文件的快捷键，打开 Typora 软件，打开偏好设置，在通用-> 高级设置 -> 打开高级设置，这会跳转到 Typora 的conf文件夹，在 `conf.user.json` 中编辑
+
+```json
+"keyBinding": {
+    // for example: 
+    // "Always on Top": "Ctrl+Shift+P"
+    // All other options are the menu items 'text label' displayed from each typora menu
+    "Copy as Html Code": "Ctrl+Shift+H",
+    "HTML": "Ctrl+Alt+H"   // 导出为 html 文件
+  },
+```
+
+只要是菜单栏上有的命令，可以将软件语言设置为英文后查看对应的文字来确定快捷键调用的命令。
+
+然后就可以编写脚本了，脚本内容（v1.1 语法）如下（sleep的间隔可以设置的大一些）
+
+```sh
+#Persistent
+SetTitleMatchMode, 2 ; 设置标题匹配模式为部分匹配
+
+; 设置Typora程序的路径
+typoraPath := "D:\Typora\Typora.exe" ; 请根据实际路径调整
+
+; 指定要遍历的文件夹路径
+folderPath := "C:\Users\xmj\Desktop\test_hotkey" ; 请根据实际路径调整
+
+Loop, Files, % folderPath "\*.md"
+{
+    ; 启动Typora并打开当前Markdown文件
+    Run, % typoraPath " " A_LoopFileFullPath
+    ; 等待Typora完全打开文件，设置时间可以根据实际情况调整
+    Sleep, 3000
+    
+    ; 激活Typora窗口
+    WinActivate, Typora
+    
+    ; 模拟按下Ctrl+Alt+H
+    Send, ^!h
+    
+    ; 等待保存文件对话框弹出
+    Sleep, 3000
+
+    ; 模拟保存操作，可以根据需要添加更多的操作，例如指定保存路径等
+    ; 这里假设已经在对话框中完成保存，模拟按下Enter键
+    Send, {Enter}
+    
+    ; 等待保存完成，关闭Typora
+    Sleep, 10000
+    WinClose, Typora
+}
+
+Exit
+```
+
 # Filezilla
 
 ## 使用Filezilla与ubuntu虚拟机互相连接
