--- a/应用随机过程与概率模型导论.md
+++ b/应用随机过程与概率模型导论.md
@@ -725,16 +725,18 @@ $$
 ## 更新理论及其应用
 
 我们已经看到泊松过程是一个计数过程，它的相继事件之间的时间是有相同指数分布的独立随机变量。一种可能的推广是考虑一个计数过程，其两次相继事件之间的时间是独立同分布的随机变量。这样的计数过程，称为**更新过程**。
+
 令$\{N(t),t\ge0\}$是一个计数过程，而以$X_n$记这个过程的第n-1个和第n个事件之间的时间，n≥1。
 **定义7.1**：如果非负随机变量列${X_1,X_2,\cdots}$是独立同分布的，那么计数过程$\{N(t),t\ge0\}$称为**更新过程**。
+
 于是一个更新过程是一个计数过程，其直到第一次事件发生的时间有某个分布F，第一个和第二个事件之间的时间独立于第一个事件的时间，并且有同样的分布F，以此类推，当一个事件发生时，我们说发生了更新。
+
 举一个更新过程的例子。假设我们有无穷多个灯泡，它们的寿命是独立同分布的。再假设在某个时间我们使用一个灯泡，而当它失效时，就立刻换上一个新的。在这些条件下，用N(t)表示直到时刻t为止失效的灯泡个数，则$\{N(t),t\ge0\}$是一个更新过程。
 对于到达间隔时间为${X_1,X_2,\cdots}$的一个更新过程，令
 $$
 {S_0} = 0,{S_n} = \sum\limits_{i = 1}^n {{X_i}} ,n \ge 1
 $$
-即$S_1=X_1$是第一次更新的时间，$S_2=X_1+X_2$是第一次更新加上第一次和第二次更新的间隔，即第二次更新的时间。
-我们将以F记到达间隔分布，而为了避免平凡情形，我们假定$F(0)=P\{X_n=0\}<1$，此外，令
+即$S_1=X_1$是第一次更新的时间，$S_2=X_1+X_2$是第一次更新加上第一次和第二次更新的间隔，即第二次更新的时间。我们将以F记到达间隔分布，而为了避免平凡情形，我们假定$F(0)=P\{X_n=0\}<1$，此外，令
 $$
 \mu  = E[{X_n}],\quad n \ge 1
 $$
@@ -758,9 +760,9 @@ $$
   & P\{ N(\infty ) < \infty \}  = P\{ {X_n} = \infty ,\exists n\}   \cr 
   &  = P\left\{ {\bigcup\limits_{n = 1}^\infty  {\{ {X_n} = \infty \} } } \right\} \le \sum\limits_{n = 1}^\infty  {P\{ {X_n} = \infty \} }  = 0 \cr}
 $$
-### N(t)的分布
+### N(t) 的分布
 
-N(t)的分布至少在理论上可以得到，首先注意下面的重要关系：时刻t之前的更新个数大于或等于n当且仅当第n次更新发生在时刻t之前或在时刻t。即
+N(t) 的分布至少在理论上可以得到，首先注意下面的重要关系：时刻 t 之前的更新个数大于或等于 n当且仅当第 n 次更新发生在时刻t之前或在时刻 t。即
 $$
 N(t) \ge n \Leftrightarrow {S_n} \le t   \tag{7.2}
 $$
@@ -808,7 +810,7 @@ $$
 {{{S_{N(t) + 1}}} \over {N(t)}} = {{{S_{N(t) + 1}}} \over {N(t) + 1}}{{N(t) + 1} \over {N(t)}}
 $$
 >（1）即使更新间隔的平均时间u等于无穷时，上面的命题也正确。在这种情形，$1/\mu$为0；
-（2）数$1/\mu$称为**更新过程的速率**；
+（2）数 $1/\mu$称为**更新过程的速率**；
 （3）因为在更新间隔的平均时间是$\mu$，显然，每$\mu$个时间单位发生更新的平均速率为1。
 
 **定理7.1（基本更新定理）**
@@ -1318,6 +1320,7 @@ $$
 P\{ X = {x_j}\}  = {P_j},\quad j = 1,2, \cdots ,\quad \sum\limits_j {{P_j}}  = 1
 $$
 的随机变量X。我们可以用逆变换技术的如下的离散版本：
+
 为了模拟具有$P\{ X = {x_j}\}  = P_j$的X，令U在(0,1)上均匀地分布，且令
 $$
 X = \left\{ \matrix{
@@ -1335,9 +1338,11 @@ $$
 
 
 ### 随机过程
+
 介绍了模拟泊松过程、非时齐泊松过程、二维泊松过程等的方法
 
 ### 方差缩减技术
+
 令$X_1,\cdots,X_n$有给定的联合分布，并且假设我们想计算
 $$
 \theta  = E[g({X_1}, \cdots ,{X_n})]
@@ -1347,7 +1352,8 @@ $$
 {Y_1} = g(X_1^{(1)}, \cdots ,X_n^{(1)})
 $$
 继续计算$Y_2,\cdots,Y_n$，可以将$\bar Y = \sum\limits_{i = 1}^k {{Y_i}/k}$作为$\theta$的估计值，方差为$E\left[ {{{\left( {\bar Y - \theta } \right)}^2}} \right]$。
-介绍了三种用于缩减估计方差的一般技术
+介绍了三种用于缩减估计方差的一般技术。
+
 #### 对偶变量的应用
 当g是单调函数，可以降低方差。具体做法为
 两次运用随机变量$U_1,\cdots,U_n$的每个集合的对偶变量方法，利用先计算$g\left( {F_1^{ - 1}({U_1}), \cdots ,F_n^{ - 1}({U_n})} \right)$，然后计算$g\left( {F_1^{ - 1}(1 - {U_1}), \cdots ,F_n^{ - 1}(1 - {U_n})} \right)$，就会减少估计$E[g({X_1}, \cdots ,{X_n})]$的方差。就是说，不用生成n个随机数的k个集合，我们应该生成k/2个集合，并且每个集合使用两次（以$U$的形式计算一次，以$1-U$的形式计算一次）。
